# lab_ros_common

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
action/: playAudio.action  speak.action
lab_common/: CMakeLists.txt  package.xml  setup.py
lab_common/action/: playAudio.action  polly_speech.action  tts.action
lab_common/cfg/: Settings.cfg
lab_common/launch/: playback.launch
lab_common/playback_library/: 1234.txt  dance.txt  first.txt  hello.txt  new.txt
lab_common/python_src/face_id/: face_id.py
lab_common/python_src/lab_ros_common/: AudioController.py
lab_common/python_src/playback/: playback.py  server.py  source_code.py
lab_common/scripts/: first_run.py  playback.py  roslaunchAutomator.py  speakandplay.py
lab_common/src/: audio.cpp  audio_controller.cpp  pico_tts.cpp
lab_polly_speech/: .gitignore  CMakeLists.txt  ReadMe.md  \  masterfile.txt  package.xml  setup.py
lab_polly_speech/action/: pollySpeech.action  polly_speech.action
lab_polly_speech/cfg/: polly.cfg
lab_polly_speech/launch/: polly_speech.launch
lab_polly_speech/python_src/lab_polly_speech/: __init__.py  polly_speech.py
lab_polly_speech/scripts/: masterfile.py  masterfile.txt  polly_node.py  polly_test.py
launch/: common.launch
move_playback/scripts/: playback.py
python_src/lab_ros_common/: AudioController.py  __init__.py
src/: audio.cpp  audio_controller.cpp  pico_tts.cpp  tester.cpp
